--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       background-color: #f8f8f8;
     }
 
-    h1 {
-      color: #007BFF;
-      margin-bottom: 5px;
-    }
-
     h2 {
       margin-bottom: 20px;
+    }
+
+    .powered {
+      color: blue;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
 
     input[type="text"] {
@@ -47,17 +48,16 @@
 </head>
 <body>
 
-  <h1>Power by Phyo Han Kyaw</h1>
+  <div class="powered">Powered by Phyo Han Kyaw</div>
   <h2>🔍 Search Subscriber (By Name, Node, or ONT Serial)</h2>
-
-  <input type="text" id="searchBox" placeholder="Type name, node, or ONT serial..." disabled />
+  <input type="text" id="searchBox" placeholder="Type name, node, or ONT serial...">
 
   <div id="results"></div>
 
-  <!-- Include PapaParse CSV parser -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+  <!-- Include CSV data -->
+  <script src="data.js"></script>
 
-  <!-- Link to your script.js -->
+  <!-- Your search script -->
   <script src="script.js"></script>
 
 </body>
