--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Search Subscriber Info</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,7 +55,6 @@
 
   <div id="results"></div>
 
-  <!-- Your search script -->
   <script src="script.js"></script>
 
 </body>
