--- a/index.html
+++ b/index.html
@@ -2,18 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Subscriber Search</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Search Subscriber Info</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 30px;
+      background-color: #f8f8f8;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      width: 100%;
+      max-width: 500px;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin-bottom: 15px;
+      max-width: 600px;
+    }
+
+    .field {
+      margin-bottom: 8px;
+    }
+
+    .field span {
+      font-weight: bold;
+    }
+
+    .powered-by {
+      color: #007BFF;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Subscriber Search</h1>
-    <input type="text" id="searchBox" placeholder="Search by any field...">
-    <div id="results"></div>
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+  <!-- "Powered by" text above the search box -->
+  <p class="powered-by">Powered by Phyo Han Kyaw</p>
+
+  <h2>🔍 Search Subscriber (By Name, Node, or ONT Serial)</h2>
+  <input type="text" id="searchBox" placeholder="Type name, node, or ONT serial...">
+
+  <div id="results"></div>
+
+  <!-- PapaParse library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+
+  <!-- Your JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
