--- a/index.html
+++ b/index.html
@@ -2,64 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Search Subscriber Info</title>
+  <title>Subscriber Search</title>
+  <link rel="stylesheet" href="style.css"> <!-- Optional if you have styles -->
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f8f8f8;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-    }
-
-    input[type="text"] {
-      padding: 10px;
-      width: 100%;
-      max-width: 500px;
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
-
-    .card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      margin-bottom: 15px;
-      max-width: 600px;
-    }
-
-    .field {
-      margin-bottom: 8px;
-    }
-
-    .field span {
-      font-weight: bold;
-    }
-
-    .powered-by {
-      color: #007BFF;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
+    /* Quick CSS inside if you don't have style.css */
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #searchBox { width: 100%; padding: 10px; margin-bottom: 20px; font-size: 16px; }
+    .card { background: #f9f9f9; padding: 15px; margin-bottom: 10px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    .field { margin-bottom: 8px; }
+    span { font-weight: bold; }
   </style>
 </head>
 <body>
 
-  <!-- "Powered by" text above the search box -->
-  <p class="powered-by">Powered by Phyo Han Kyaw</p>
+  <h1>Subscriber Search</h1>
 
-  <h2>🔍 Search Subscriber (By Name, Node, or ONT Serial)</h2>
-  <input type="text" id="searchBox" placeholder="Type name, node, or ONT serial...">
+  <input type="text" id="searchBox" placeholder="Search...">
 
   <div id="results"></div>
 
-  <!-- PapaParse library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+  <!-- PapaParse library for parsing CSV -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
-  <!-- Your JavaScript -->
+  <!-- Your data and script -->
+  <script src="data.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
