--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
       const formData = new FormData(e.target);
       const data = Object.fromEntries(formData.entries());
 
-      const response = await fetch('https://your-backend-url.com/submit', {
+      const response = await fetch('https://github.com/Phyohankyaw761/ygnsubscriber-search', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
